--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,21 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="org.feup.apm.lunchlist3b">
+          package="org.feup.apm.lunchlist4">
 
     <application
-        android:name="org.feup.apm.lunchlist3b.LunchApp"
         android:allowBackup="true"
         android:icon="@drawable/rest_icon"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name="org.feup.apm.lunchlist3b.MainActivity">
+        <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name="org.feup.apm.lunchlist3b.DetailsActivity"
+        <activity android:name=".DetailsActivity"
                   android:label="Details">
         </activity>
     </application>
