--- a/Client/app/src/main/AndroidManifest.xml
+++ b/Client/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="org.feup.apm.lunchlist4">
+    package="org.feup.apm.lunchlist4">
 
     <application
         android:allowBackup="true"
@@ -8,15 +8,17 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".transition_details"></activity>
         <activity android:name=".MainActivity">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
-                <category android:name="android.intent.category.LAUNCHER"/>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".DetailsActivity"
-                  android:label="Details">
-        </activity>
+        <activity
+            android:name=".DetailsActivity"
+            android:label="Details"></activity>
     </application>
 
 </manifest>
