--- a/Client/app/src/main/AndroidManifest.xml
+++ b/Client/app/src/main/AndroidManifest.xml
@@ -8,7 +8,6 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".transition_details"></activity>
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -18,7 +17,12 @@
         </activity>
         <activity
             android:name=".DetailsActivity"
-            android:label="Details"></activity>
+            android:label="Details">
+        </activity>
+        <activity
+            android:name=".DetailsTransaction"
+            android:label="DetailsTran">
+        </activity>
     </application>
 
 </manifest>
