--- a/Client/app/build.gradle
+++ b/Client/app/build.gradle
@@ -30,4 +30,5 @@ dependencies {
     implementation 'com.google.android.material:material:1.0.0'
     implementation 'androidx.annotation:annotation:1.0.2'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0'
+    implementation 'me.dm7.barcodescanner:zxing:1.9'
 }
