--- a/Client/app/src/main/AndroidManifest.xml
+++ b/Client/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="org.feup.apm.ACME">
+    package="org.feup.apm.lunchlist4">
 
     <application
         android:allowBackup="true"
@@ -8,11 +8,11 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name="org.feup.apm.ACME.NewTransaction" />
+        <activity android:name=".NewTransaction" />
         <activity
-            android:name="org.feup.apm.ACME.ui.login.LoginActivity"
+            android:name=".ui.login.LoginActivity"
             android:label="@string/title_activity_login" />
-        <activity android:name="org.feup.apm.ACME.MainActivity">
+        <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -20,10 +20,10 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="org.feup.apm.ACME.DetailsActivity"
+            android:name=".DetailsActivity"
             android:label="Details" />
         <activity
-            android:name="org.feup.apm.ACME.DetailsTransaction"
+            android:name=".DetailsTransaction"
             android:label="Transaction Details" />
     </application>
 
