--- a/Server/package.json
+++ b/Server/package.json
@@ -6,14 +6,17 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "async": "^3.1.0",
     "body-parser": "^1.19.0",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "^4.16.4",
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
-    "mysql2": "^2.0.0",
     "pug": "^2.0.4",
     "sequelize": "^5.21.2"
+  },
+  "devDependencies": {
+    "sqlite3": "^4.1.0"
   }
 }
