--- a/Client/app/src/main/AndroidManifest.xml
+++ b/Client/app/src/main/AndroidManifest.xml
@@ -8,6 +8,10 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity
+            android:name=".QrCodeActivity"
+            android:label="@string/title_activity_qr_code"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
         <activity android:name=".NewTransaction" />
         <activity
             android:name=".ui.login.LoginActivity"
