--- a/Client/app/src/main/AndroidManifest.xml
+++ b/Client/app/src/main/AndroidManifest.xml
@@ -8,10 +8,11 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".Profile"></activity>
         <activity
             android:name=".QrCodeActivity"
             android:label="@string/title_activity_qr_code"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".NewTransaction" />
         <activity
             android:name=".ui.login.LoginActivity"
