--- a/Client/app/src/main/AndroidManifest.xml
+++ b/Client/app/src/main/AndroidManifest.xml
@@ -8,7 +8,8 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Profile"></activity>
+        <activity android:name=".Register"></activity>
+        <activity android:name=".Profile" />
         <activity
             android:name=".QrCodeActivity"
             android:label="@string/title_activity_qr_code"
