--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,18 @@
 *.iml
 .gradle
 /local.properties
-/.idea/caches/build_file_checksums.ser
-/.idea/libraries
-/.idea/modules.xml
-/.idea/workspace.xml
+Client\.idea\caches\build_file_checksums.ser
+Client\.idea\libraries
+Client\.idea\modules.xml
+Client\.idea\workspace.xml
+.idea/caches/build_file_checksums.ser
+.idea/libraries
+.idea/modules.xml
+.idea/workspace.xml
 .DS_Store
 /build
 /captures
 .externalNativeBuild
+app/
+Client/local.properties
+Client/.gradle
