--- a/Client/app/build.gradle
+++ b/Client/app/build.gradle
@@ -31,4 +31,6 @@ dependencies {
     implementation 'androidx.annotation:annotation:1.0.2'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0'
     implementation 'me.dm7.barcodescanner:zxing:1.9'
+    implementation 'com.android.volley:volley:1.1.1'
+
 }
