--- a/Terminal/app/build.gradle
+++ b/Terminal/app/build.gradle
@@ -26,4 +26,6 @@ android {
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
   implementation 'androidx.appcompat:appcompat:1.1.0'
+    implementation 'com.android.volley:volley:1.1.1'
+
 }
