--- a/Terminal/app/src/main/AndroidManifest.xml
+++ b/Terminal/app/src/main/AndroidManifest.xml
@@ -2,7 +2,11 @@
 <manifest package="org.feup.apm.scanqr"
           xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <uses-permission android:name="android.permission.INTERNET"/>
+
     <application
+        android:networkSecurityConfig="@xml/network_security_config"
+
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -15,5 +19,6 @@
             </intent-filter>
         </activity>
     </application>
+
 
 </manifest>
