--- a/Client/local.properties
+++ b/Client/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Wed Oct 16 16:51:55 BST 2019
-sdk.dir=C\:\\Users\\Ricardo\\AppData\\Local\\Android\\Sdk
+#Fri Nov 15 14:36:38 GMT 2019
+sdk.dir=C\:\\Users\\vitor\\AppData\\Local\\Android\\Sdk
