--- a/Client/app/build.gradle
+++ b/Client/app/build.gradle
@@ -32,5 +32,6 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0'
     implementation 'me.dm7.barcodescanner:zxing:1.9'
     implementation 'com.android.volley:volley:1.1.1'
+    implementation 'androidx.mediarouter:mediarouter:1.1.0'
 
 }
