--- a/Server/package.json
+++ b/Server/package.json
@@ -13,6 +13,7 @@
     "express": "^4.16.4",
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
+    "node-pre-gyp": "^0.14.0",
     "pug": "^2.0.4",
     "sequelize": "^5.21.2"
   },
