--- a/Client/app/build.gradle
+++ b/Client/app/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 29
     defaultConfig {
-        applicationId 'org.feup.apm.lunchlist4'
+        applicationId 'org.feup.CMOV.ACME_Client'
         minSdkVersion 19
         targetSdkVersion 29
         versionCode 1
