--- a/Terminal/app/build.gradle
+++ b/Terminal/app/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 29
     defaultConfig {
-        applicationId "org.feup.apm.scanqr"
+        applicationId "org.feup.CMOV.ACME_Terminal"
         minSdkVersion 21
         targetSdkVersion 29
         versionCode 1
