--- a/Project_2/WeatherXamarim/WeatherXamarim/WeatherXamarim/WeatherXamarim.csproj
+++ b/Project_2/WeatherXamarim/WeatherXamarim/WeatherXamarim/WeatherXamarim.csproj
@@ -14,6 +14,7 @@
     <PackageReference Include="Microsoft.Net.Http" Version="2.2.29" />
     <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform" Version="6.2.9" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+    <PackageReference Include="System.Net.Http" Version="4.3.4" />
     <PackageReference Include="Xam.Plugin.Connectivity" Version="3.2.0" />
     <PackageReference Include="Xamarin.Forms" Version="4.3.0.991211" />
     <PackageReference Include="Xamarin.Essentials" Version="1.3.1" />
