--- a/Project_2/WeatherXamarim/WeatherXamarim/WeatherXamarim/WeatherXamarim.csproj
+++ b/Project_2/WeatherXamarim/WeatherXamarim/WeatherXamarim/WeatherXamarim.csproj
@@ -10,6 +10,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Bcl" Version="1.1.10" />
     <PackageReference Include="Microsoft.Bcl.Build" Version="1.0.21" />
     <PackageReference Include="Microsoft.Net.Http" Version="2.2.29" />
     <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform" Version="6.2.9" />
