--- a/Project_2/WeatherXamarim/WeatherXamarim/WeatherXamarim.UWP/WeatherXamarim.UWP.csproj
+++ b/Project_2/WeatherXamarim/WeatherXamarim/WeatherXamarim.UWP/WeatherXamarim.UWP.csproj
@@ -132,14 +132,16 @@
     <Content Include="Assets\Wide310x150Logo.scale-200.png" />
     <Content Include="Assets\Wide310x150Logo.scale-400.png" />
     <Content Include="bg.png" />
+    <Content Include="chart.png" />
     <Content Include="cloudiness.png" />
     <Content Include="cloudy.png" />
     <Content Include="dashboard.png" />
+    <Content Include="fav.png" />
     <Content Include="grid.png" />
-    <Content Include="gridcolor.png" />
+    <Content Include="gridColor.png" />
     <Content Include="humidity.png" />
     <Content Include="list.png" />
-    <Content Include="listcolor.png" />
+    <Content Include="listColor.png" />
     <Content Include="menu.png" />
     <Content Include="mist.png" />
     <Content Include="overlay.png" />
@@ -147,9 +149,11 @@
     <Content Include="pressure.png" />
     <Content Include="Properties\Default.rd.xml" />
     <Content Include="rainy.png" />
+    <Content Include="remove.png" />
     <Content Include="settings.png" />
     <Content Include="slightlycloudy.png" />
     <Content Include="snow.png" />
+    <Content Include="splash_logo.png" />
     <Content Include="sunny.png" />
     <Content Include="weather.png" />
     <Content Include="wind.png" />
