--- a/Project_2/WeatherXamarim/WeatherXamarim/WeatherXamarim.Android/Properties/AndroidManifest.xml
+++ b/Project_2/WeatherXamarim/WeatherXamarim/WeatherXamarim.Android/Properties/AndroidManifest.xml
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="1.0" package="com.feup.weathersans" android:installLocation="preferExternal">
 	<uses-sdk android:minSdkVersion="11" android:targetSdkVersion="28" />
-	<application android:label="WeatherSans"></application>
+	<application android:label="WeatherSans" android:icon="@drawable/app_icon"></application>
 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 	<uses-permission android:name="android.permission.INTERNET" />
 </manifest>
