--- a/Project_2/WeatherXamarim/WeatherXamarim/WeatherXamarim.Android/WeatherXamarim.Android.csproj
+++ b/Project_2/WeatherXamarim/WeatherXamarim/WeatherXamarim.Android/WeatherXamarim.Android.csproj
@@ -213,5 +213,8 @@
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\splash_logo.png" />
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\app_icon.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
